<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100"
    android:baselineAligned="false">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@color/preto"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/button_switch_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_capture_cam2" />
                <ImageButton
                    android:id="@+id/button_import_image"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_galeria" />
                <ImageButton
                    android:id="@+id/button_flash"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_flash_off" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <ImageButton
                    android:id="@+id/button_close"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_capture_cancel" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="35"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8">

                        <ImageView
                            android:id="@+id/moldura"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/toastText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:textColor="@color/branco"
                            android:rotation="-90"
                            android:background="#DAAA"
                            android:visibility="invisible"/>


                        <!--<ProgressBar
                                                    android:id="@+id/progressBar1"
                                                    style="?android:attr/progressBarStyleLarge"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:layout_centerInParent="true"
                                                    android:visibility="invisible"/> -->


                    </RelativeLayout>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="62"
                        android:background="@color/preto" />
                </LinearLayout>


                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true">

                    <ImageButton
                        android:id="@+id/button_capture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@android:color/transparent"
                        android:src="@drawable/bt_camera_photo" />


                </RelativeLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:background="@color/preto">

                <ListView
                    android:id="@+id/lv_molduras"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#33FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>