<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/ic_capture_cancel" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13" />


            <ImageView
                android:id="@+id/iv_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/ic_campture_download" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_weight="70"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_image_taked"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="63" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:src="@null" />
            </LinearLayout>

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true">

                <ImageButton
                    android:id="@+id/iv_shared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/bt_capture_blue_default" />

                <ImageButton
                    android:id="@+id/iv_shared_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_bt_share" />

            </RelativeLayout>


        </RelativeLayout>


        <br.edu.ufcg.embedded.motofest.utils.MoldurasListView
            android:id="@+id/lv_molduras"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="#33FFFFFF" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>