...
    <string name="bt_wifi">Wi-Fi</string>
    <string name="bt_mobile_network">Mobile Network</string>
    <string name="enable_network">Enable Internet Connection to use this feature. Click Wifi to open Wifi settings or Mobile Network service to enable your data network</string>
    <string name="bt_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pinpoint">Markers</string>
    <string name="programacao">Schedule</string>
    <string name="apoio">Sponsors</string>

    <string name="hoje">Today</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
...
    <string name="avaliation_text">The organization of the 2015 Motofest want to know your opinion about the event.</string>
    <string name="avaliation_send">evaluate successfully sent</string>

    <string name="version">Version 1.0.2</string>
    <string name="copyright">2015 Copyright©\nEmbedded Systems and Pervasive Computing Lab - UFCG -Brazil</string>
    <string name="logon_needed">To have access to the timeline you must be logged</string>
    <string name="timeline">Timeline</string>

    <string name="days">D</string>
    <string name="hours">H</string>
    <string name="minutes">M</string>
    <string name="seconds">S</string>

...
